# habitica-prioritize

./: .gitignore  .mise.toml  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
scripts/: prioritize.py
scripts/tests/: test_prioritize.py
