[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project]
name = "habitica-prioritize"
version = "0.1.12"
description = "Rank Habitica todos using a pairwise prioritization matrix"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["requests"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ty", "ruff"]

[project.scripts]
habitica-prioritize = "scripts.prioritize:main"

[tool.ty.environment]
extra-paths = ["scripts"]
